// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and matches snapshot with not open and not permanent without crashing 1`] = `
<body
  style=""
>
  <div />
</body>
`;

exports[`renders and matches snapshot with not open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-499 makeStyles-drawerPermanent-501"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-500 makeStyles-drawerPaperPermanent-502 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiContainer-root makeStyles-body-504 MuiContainer-maxWidthLg"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            drawer.createGroup
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-footer-503 makeStyles-paper-585 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-586 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and matches snapshot with open and not permanent without crashing 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDrawer-root MuiDrawer-modal makeStyles-drawer-1"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-2 MuiDrawer-paperAnchorRight MuiPaper-elevation16"
      tabindex="-1"
    >
      <div
        class="MuiBox-root MuiBox-root-52 makeStyles-root-50"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-closeButton-49"
          data-testid="close"
          id="drawer-close"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiContainer-root makeStyles-body-6 MuiContainer-maxWidthLg"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            drawer.createGroup
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-footer-5 makeStyles-paper-111 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-112 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`renders and matches snapshot with open and permanent without crashing 1`] = `
<div>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-262 makeStyles-drawerPermanent-264"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-263 makeStyles-drawerPaperPermanent-265 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
    >
      <div
        class="MuiContainer-root makeStyles-body-267 MuiContainer-maxWidthLg"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-disableElevation MuiButton-fullWidth"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            drawer.createGroup
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-footer-266 makeStyles-paper-348 MuiPaper-elevation6"
      >
        <div
          class="MuiContainer-root makeStyles-container-349 MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-justify-xs-space-evenly"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                privacyPolicy.title
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiLink-button MuiTypography-colorPrimary"
              >
                imprint.title
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
